# coquito

./: Cargo.toml  Makefile  README.md  \  grammar.ebnf  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: check.yml  release.yml  scheduled.yml  test.yml
examples/: ident.cqo  simple.cqo  simple_large.cqo  simple_small.cqo  test.cqo
src/: lexer.rs  main.c  main.rs  utils.rs
src/file/: reader.c  reader.h  utf8.c  utf8.h
src/lexer/: .state.rs.rustfmt  mod.rs  state.rs  tokens.rs
src/parser/: ast.rs  mod.rs  parser.c  parser.h  rules.rs  state.rs
