[package]
name = "coquito"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }

[profile.release]
strip = true
lto = true
opt-level = "z"  # Optimize for size.
codegen-units = 1
panic = "abort"
